# cilia

./: .gitignore  CMakeLists.txt  Kuramoto  Makefile  README.md  fsdfdsfsdf  imgui.ini  kuramoto.ipynb  kuramoto.py
cuda_src/: HelloWorldFromGPU.cu  UpdateGrid.cu
include/: Application.hpp  Coupling.hpp  Grid.hpp  Oscillator.hpp  OscillatorView.hpp  Oseen.hpp  OseenEnums.hpp  OseenView.hpp  PlotWindow.hpp  SharedData.hpp  SharedDataKuramoto.hpp  SharedDataOseen.hpp  Tests.hpp  UI.hpp  UpdateGrid.cuh  Utils.hpp
pyplot/: PlotOrderParameter.py  PlotTest1.py  Plots.py
src/: Application.cpp  Grid.cpp  OldApplication.cpp  Oscillator.cpp  OscillatorView.cpp  Oseen.cpp  OseenView.cpp  PlotWindow.cpp  Tests.cpp  UI.cpp  Utils.cpp  main.cpp  testScript.cpp
